--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "react-latex",
     "version": "1.3.1",
     "description": "React component to render latex strings",
-    "homepage": "",
     "repository": "zzish/react-latex",
     "author": {
         "name": "Zzish",
@@ -34,14 +33,14 @@
         "eslint-plugin-import": "^2.8.0",
         "eslint-plugin-jsx-a11y": "^6.0.3",
         "eslint-plugin-react": "^7.5.1",
-        "mocha": "^3.3.0",
+        "mocha": "^6.2.0",
         "prettier": "^1.2.2",
         "prop-types": "^15.5.0",
         "react": "^16.2.0",
         "react-dom": "^16.2.0"
     },
     "scripts": {
-        "test": "mocha --compilers js:babel-register",
+        "test": "mocha --require babel-register",
         "build": "mkdir build; babel ./src/latex.js --out-file ./build/latex.js",
         "lint": "eslint ./src/latex.js",
         "prepublish": "npm run build"
